--- a/B&B_App/Pages/Details.razor
+++ b/B&B_App/Pages/Details.razor
@@ -188,6 +188,10 @@
         var result = dialogService.Show<NewBookingDialog>("Ny booking", parameters, options);
 
         var resultData = await result.Result;
+        if (!resultData.Cancelled)
+        {
+            _contract = new Contract();
+        }
 
     }
 }
