--- a/B&B_App/Pages/Bookings.razor
+++ b/B&B_App/Pages/Bookings.razor
@@ -30,9 +30,9 @@
 @code {
     private List<Contract> _userContracts = new List<Contract>();
 
-    protected override void OnInitialized()
+    protected override async void OnInitialized()
     {
-
+        //_userContracts = await contractService.
 
         NewBookingsContainer.OnChange += StateHasChanged;
         base.OnInitialized();
