--- a/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
+++ b/B&B_App/Components/Displays/AccessoryCreatorDisplay.razor
@@ -29,7 +29,7 @@
     public List<RoomAccessory> RoomAccessories { get; set; } = new List<RoomAccessory>();
 
     [Parameter]
-    public EventCallback<RoomAccessory> ItemDeleted { get; set; }
+    public EventCallback<RoomAccessory> ItemDeleted { get; set; } = new EventCallback<RoomAccessory>();
 
     [Parameter]
     public bool AbleToDelete { get; set; } = true;
