--- a/B&B_App/Components/Dialogs/NewBookingDialog.razor
+++ b/B&B_App/Components/Dialogs/NewBookingDialog.razor
@@ -2,6 +2,7 @@
 @using System.Reflection
 @using B_B_App.Services;
 @using B_B_ClassLibrary.Models;
+@using B_B_ClassLibrary.Enums;
 @implements IDisposable
 @inject IContractService<Contract> contractService
 @inject NewBookingsContainer NewBookingsContainer
