--- a/B&B_App/Pages/BnBCreator.razor
+++ b/B&B_App/Pages/BnBCreator.razor
@@ -274,6 +274,7 @@ else
 
         if (_loginManager.IsLandLord())
         {
+            _location.LandlordId = landlord?.Id ?? 0;
             _ownedLocations = await _locationService.GetLocationsByLandlordId(landlord?.Id ?? 0);
             var rooms = await _roomService.GetAllRooms();
             _ownedRooms = rooms.Where(x => _ownedLocations.Exists(z => z.Id == x.LocationId) == true).ToList();
@@ -340,6 +341,8 @@ else
 
     private async void CreateLocation()
     {
+
+
         if (string.IsNullOrEmpty(_location.Name))
             _errorManager.InfoBar("You need to enter a name", Variant.Text, Severity.Error);
         else if (_location.AmountOfRooms == 0 || _location.AmountOfRooms > 10)
@@ -355,7 +358,7 @@ else
         else if (string.IsNullOrEmpty(_location.Area))
             _errorManager.InfoBar("Area cant be empty", Variant.Text, Severity.Error);
         else
-            await _locationService.Create(_location);
+           _location = await _locationService.Create(_location);
 
     }
 
