Last little change

--- a/B&B_App/Components/Dialogs/LoginDialog.razor
+++ b/B&B_App/Components/Dialogs/LoginDialog.razor
@@ -1,5 +1,4 @@
-﻿@using B_B_ClassLibrary.BusinessModels;
-@inject ILoginService loginService
+﻿@using B_B_ClassLibrary.BusinessModels
 
 <div class="modal fade show" id="myModal" style="display:block; position:relative; z-index:3;"   aria-modal="true" role="dialog">
     <div class="modal-dialog">
